--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+channels==4.1.0
 Django==5.0.6
 djangorestframework==3.15.2
+eventlet==0.36.1
 pandas==2.2.2
 python-dotenv==1.0.1
+python-socketio==5.11.3
 Requests==2.32.3
 sec_api==1.0.18
 yahoo_fin==0.8.9.1
